--- a/Foodie/Base.lproj/Favorites.storyboard
+++ b/Foodie/Base.lproj/Favorites.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -68,9 +67,7 @@
                         <sections/>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Favorites" id="mAz-PL-EqF">
-                        <barButtonItem key="rightBarButtonItem" title="Sort" style="plain" id="Fq1-AJ-5Bk"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Favorites" id="mAz-PL-EqF"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bi2-eb-t0h" userLabel="First Responder" sceneMemberID="firstResponder"/>
