--- a/Foodie/BusinessDetail.storyboard
+++ b/Foodie/BusinessDetail.storyboard
@@ -27,16 +27,6 @@
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="6JS-yL-jg9" secondAttribute="height" multiplier="80:45" id="SeZ-C8-Jea"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="SeZ-C8-Jea"/>
-                                    </mask>
-                                </variation>
-                                <variation key="widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="SeZ-C8-Jea"/>
-                                    </mask>
-                                </variation>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="55" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="Xd4-tS-vqg">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
@@ -104,7 +94,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aet-kU-1rp">
-                                                    <rect key="frame" x="16" y="71" width="382" height="60.666666666666657"/>
+                                                    <rect key="frame" x="16" y="71" width="382" height="60"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -149,36 +139,6 @@
                             <constraint firstAttribute="trailing" secondItem="Xd4-tS-vqg" secondAttribute="trailing" id="cLW-Za-tJo"/>
                             <constraint firstItem="6JS-yL-jg9" firstAttribute="top" secondItem="E2q-sG-6zf" secondAttribute="bottom" id="yph-sx-iAF"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="6JS-yL-jg9"/>
-                                <exclude reference="Xd4-tS-vqg"/>
-                            </mask>
-                            <mask key="constraints">
-                                <exclude reference="JZB-c0-ndh"/>
-                                <exclude reference="b1b-5i-rTl"/>
-                                <exclude reference="yph-sx-iAF"/>
-                                <exclude reference="UAc-o3-Adm"/>
-                                <exclude reference="ZeD-gC-Fje"/>
-                                <exclude reference="cLW-Za-tJo"/>
-                                <exclude reference="PKq-K9-gQv"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=compact">
-                            <mask key="subviews">
-                                <include reference="6JS-yL-jg9"/>
-                                <include reference="Xd4-tS-vqg"/>
-                            </mask>
-                            <mask key="constraints">
-                                <include reference="JZB-c0-ndh"/>
-                                <include reference="b1b-5i-rTl"/>
-                                <include reference="yph-sx-iAF"/>
-                                <include reference="UAc-o3-Adm"/>
-                                <include reference="ZeD-gC-Fje"/>
-                                <include reference="cLW-Za-tJo"/>
-                                <include reference="PKq-K9-gQv"/>
-                            </mask>
-                        </variation>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
