--- a/Foodie/Storyboards/Favorites.storyboard
+++ b/Foodie/Storyboards/Favorites.storyboard
@@ -17,15 +17,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="favoritesCell" id="00e-fh-dl6" customClass="FavoritesTableViewCell" customModule="Foodie" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="55" width="414" height="80"/>
+                                <rect key="frame" x="0.0" y="55.333333333333336" width="414" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="00e-fh-dl6" id="e1M-4h-XYy">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="79.666666666666671"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J4H-Nh-zbn">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J4H-Nh-zbn">
                                             <rect key="frame" x="10" y="10" width="59.666666666666671" height="59.666666666666671"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="J4H-Nh-zbn" secondAttribute="height" multiplier="1:1" id="Ctu-dg-LPA"/>
@@ -68,7 +69,6 @@
                     </tableView>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Favorites" id="mAz-PL-EqF"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bi2-eb-t0h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
